# tskit_arg_visualizer

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  arg_visualizer.ipynb  data.js  environment.yml  example.ipynb  example.json  example.py  gene_conversion.py  index.html  pathing.md  plotting.md  presentation.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tskit_presentation.pptx  visualizer.html  visualizer.js  yan_example.py  ~$tskit_presentation.pptx
docs/: notes.md  pathing.md  plotting.md  readme_figure.ipynb  tutorial.md
docs/logo/: logo.py
docs/manuscript/: tskit_arg_visualizer_manuscript.ai  tskit_arg_visualizer_manuscript_figure.ai
docs/manuscript/Figure1/A/: README.md  view.py
docs/manuscript/Figure1/B/: README.md  duffy_100.ai  duffy_100_bw.ai  out.1000.sites
docs/manuscript/Figure1/C/: ARGviz-XA.json  large_arg.py  positioned.py  small_arg.py  view.py
docs/manuscript/duffy/: README.md  arg2trees.py  duffy_100.ai  out.1000.arg  out.1000.trees  view.py
docs/manuscript/old/: tskit_arg_visualizer_manuscript.ipynb
tests/: test_draw_parameters.py
tskit_arg_visualizer/: __init__.py  visualizer.css  visualizer.js
tskit_arg_visualizer/alternative_plots/: breakpoints.js  edge_spans.js  genome_bar.js
visualizer/: visualizer.css  visualizer.js  visualizer.py
