[metadata]
name = tskit_arg_visualizer
author = James Kitchens
author_email = kitchensjn@gmail.com
license = MIT
description = Interactive visualization method for ancestral recombination graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pypi.python.org/pypi/tskit_arg_visualizer
project_urls =
    Documentation = https://tskit_arg_visualizer.readthedocs.io/en/latest/
    Changelog = https://github.com/kitchensjn/tskit_arg_visualizer/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/kitchensjn/tskit_arg_visualizer/issues
    GitHub = https://github.com/kitchensjn/tskit_arg_visualizer
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    population genetics
    tree sequence
    ancestral recombination graph
    visualization
    D3.js
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = tskit_arg_visualizer
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    IPython